using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Axis
{

    public const string VERTICAL_AXIS = "Vertical";
    public const string HORIZONTAL_AXIS = "Horizontal";

}


public class Tags{
    public const string GLADIATOR_TAG="Gladitor";
    public const string ENEMY_TAG="Enemy";
}

public class AnimationTags{

    public const string SLOW_RUN_ANIMATION_STATE = "SlowRunAnimationState";

    public const string WALK_BACK_ANIMATION_STATE="WalkBackAnimationState";

    public const string STANDING_ATTACT_ANIMATION_STATE="StandingAttackAnimationState";

    public const string MUTANT_PUNCH_ATTACK_ANIMATION_STATE="MutantPunchAttackAnimationState";

    public const string JUMP_ATTACK_ANIMATION_STATE="JumpAnimationAttackState";

    public const string SWORD_AND_SHIELD_BLOCK_DEFENSE_STATE="SwordAndShieldBlockDefenseState";

}